samples/_failures_safe/1761415916_b966ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da8cb522.c: In function ‘print_token’:
./samples/SAFE/__tmp_da8cb522.c:176:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  176 |     const char *type_names[]
      |     ^~~~~
./samples/SAFE/__tmp_da8cb522.c:176:5: error: expected declaration or statement at end of input
